         -- EAAGLES_CONFIG_MAX_REPORTS for imulation::Radar::MAX_REPORTS and imulation::TrackManager::MAX_REPORTS
         -- EAAGLES_CONFIG_MAX_NETIO_ENTITIES for Simulation::NetIO::MAX_OBJECTS
         -- EAAGLES_CONFIG_MAX_NETIO_ENTITY_TYPES for Simulation::NetIO::MAX_ENTITY_TYPES
         -- EAAGLES_CONFIG_MAX_NETIO_NEW_OUTGOING for Simulation::NetIO::MAX_NEW_OUTGOING

--------------------------------------------------------------------------------
basic

   Object class
      1) registerClass() now returns the correct index (bug fix)

   Statistic class
      1) Removed empty file in src/basic named Statistic.h - not needed

   Timer class
      1) addToTimerList() -- prints an error message if unable to add a
         new timer to the list.

--------------------------------------------------------------------------------
basicGL

   ColorRotary class
      1) General cleanup - initialized some data previously uninitialized

--------------------------------------------------------------------------------
dis

   NetIO class
      1) Add the initialization of member variables 'siteId', 'appID' and
      'exerciseID' (bug fix); and added the initData() function.

   NetIOMunitionDetonation, NetIOPlatforms and NetIOWeaponFire
      1) Set a few uninitialized fields within PDUs


--------------------------------------------------------------------------------
otw

   OtwCigiCl class
      1) Removed unused variables to eliminate warnings

--------------------------------------------------------------------------------
recorder


--------------------------------------------------------------------------------
simulation

   General
      1) Updated AirVehicle, GroundVehicle, LifeForms and Player so that networked
         players "reset" properly. 
         
   Message class
      1) General cleanup of the code
         -- added 'const', as needed
         -- getSenderName() and getDestNames() now return 'const' pointers

   Player class